# Puzzlebot

devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/multi_points_tracking/: estimator.py  multi_points_tracking_node
devel/lib/pkgconfig/: EKF_SLAM.pc  multi_points_tracking.pc  puzzlebot_control.pc  puzzlebot_gazebo.pc  puzzlebot_rviz.pc  puzzlebot_world.pc
devel/lib/puzzlebot_control/: puzzlebot_control_node
src/ekf_slam/: CMakeLists.txt  package.xml
src/ekf_slam/launch/: ekf_slam.launch
src/ekf_slam/rviz/: puzzlebot_sim.rviz
src/ekf_slam/scripts/: encoder_estimator.py
src/ekf_slam/setting/: parameters.yaml
src/ekf_slam/src/: aruco_ekf_slam.cpp
src/ekf_slam/test/: aruco_ekf_slam_node_cpp
src/multi_points_tracking/: CMakeLists.txt  Goals.txt  Goals2.txt  package.xml
src/multi_points_tracking/launch/: Encoder_test.launch  multi_points_tracking.launch  multi_points_tracking_rgbd.launch
src/multi_points_tracking/rviz/: puzzlebot_sim.rviz
src/multi_points_tracking/scripts/: estimator.py
src/multi_points_tracking/setting/: parameters.yaml
src/multi_points_tracking/src/: Encoder_test.cpp  Run_encoder.cpp  multi_points_tracking_node.cpp
src/multi_points_tracking/test/: encoder_calibration.txt
src/pf_slam/: CMakeLists.txt  package.xml
src/pf_slam/launch/: pf_slam.launch
src/pf_slam/setting/: parameters.yaml
src/pf_slam_2/: CMakeLists.txt  package.xml
src/puzzlebot_rviz/: CMakeLists.txt  package.xml
src/puzzlebot_rviz/launch/: puzzlebot_rviz.launch
src/puzzlebot_rviz/model/: puzzlebot_sim.urdf
(+32 files in other folders)
